# refactored-octo-enigma

./: .gitignore  .gitmodules  CMakeLists.txt  myy.c  shaders.pack
OldRubyPacker/: packing_old.rb
data/: shaders.pack
myy/: myy.h
myy/helpers/fonts/: packed_fonts_display.c  packed_fonts_display.h
myy/helpers/opengl/: loaders.c
ruby_packer/: ShadersPacker-GLES3.rb  ShadersPacker.rb  test.rb
shaders/: color_node.frag  color_node.vert  color_static.frag  color_static.vert  fixed_widgets.frag  fixed_widgets.vert  lines.frag  lines.vert  node.frag  node.vert  standard.frag  standard.vert
src/: menus.c  menus.h  nodes.c  nodes.h  nodes_asm.c  nodes_asm.h  nodes_mem.c  nodes_mem.h  program_builder_menu.c  program_builder_menu.h  text.c  text.h
tests/: binary_generator_menu.c  buffers.c  common.h  hitaction.c  myy.c  tests_defs.h
textures/: menu-textures.xcf  menus.raw
